--- a/stylesheets/_navbar.scss
+++ b/stylesheets/_navbar.scss
@@ -2,6 +2,7 @@
 
 nav {
   font-family: $source-sans;
+  font-size: $body-font-size;
   width: 100%;
   height: $navbar-height;
   position: fixed;
