--- a/stylesheets/_variables.scss
+++ b/stylesheets/_variables.scss
@@ -1,5 +1,5 @@
 /* variables */
-$body-line-height: 21px;
+$body-line-height: 25px;
 $source-sans: 'Source Sans Pro', sans-serif;
 $raleway: 'Raleway', sans-serif;
 $navbar-height: 50px;
@@ -8,4 +8,4 @@ $that-blue: #579fc6;
 $background-color: #ffffff;
 $black: #000000;
 $section-color: #dadada;
-$body-font-size: 14px;
+$body-font-size: 16px;
