--- a/stylesheets/wenevergo.scss
+++ b/stylesheets/wenevergo.scss
@@ -14,6 +14,9 @@ body {
 	position: relative;
 	top: $navbar-height;
 	background-color: $background-color;
+  font-family: $source-sans;
+  line-height: $body-line-height;
+  font-size: $body-font-size;
 }
 
 h1, h2, h3 {
@@ -28,6 +31,7 @@ h1 {
 	//color: darken($navbar-color, 30%);
 	color: $black;
   text-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
+  line-height: normal;
 
   sup {
     top: -0.2em;
@@ -35,21 +39,20 @@ h1 {
 }
 
 h2 {
-	font-size: 30px;
-	line-height: $body-line-height*2;
+	font-size: $body-font-size*1.625;
+	line-height: $body-line-height*1.625;
   text-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
 }
 
 h3 {
-	font-size: 18px;
-	line-height: $body-line-height*1.5;
+	font-size: $body-font-size*1.25;
+	line-height: $body-line-height*1.25;
 
 }
 
 p, li, label, input, textarea {
-	font-family: $source-sans;
-	line-height: $body-line-height;
-	font-size: $body-font-size;
+  line-height: $body-line-height;
+
 }
 
 
@@ -101,7 +104,7 @@ div.section {
 	background-color: #ffffff;
 }
 
-#projects, #skills {
+#projects, #skills, #portfolio {
   background-color: $section-color;
 }
 
@@ -109,6 +112,12 @@ div#techSkillsContainer, div#softSkillsContainer {
 	float: left;
 	width: 48%;
 
+}
+
+div#portfolio {
+  overflow-x: scroll;
+  width: 100%;
+  
 }
 
 
